--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <div>
-        <h2>HOME</h2>
+        <h2>IL RISTORANTE</h2>
         <img width="600" src="./assets/home.jpg" alt="tortino di pesce e verdure">
         <p>
             Nella vita ci sono, la musica, l’arte, lo sport e tutto il resto… il cibo ne fa parte.
